Adding input in the description

--- a/src/description/1.md
+++ b/src/description/1.md
@@ -8,6 +8,15 @@ Bar charts are one of the most common forms of visualization, because they are v
 
 _3D bar charts are more informed if the two categories on the X and Z axes are related for example age group and race or day of the week and time of the day._ 
 
+## Input
+
+| | Category 1 | Category 2 | Category 3 | Category 4
+| ------------- |:-------------:| :-----:| :-----:| :-----:|
+Category A | 4 | 8 | 12 | 16
+Category B | 20 | 24 | 28 | 32
+Category C | 36 | 40 | 44 | 48
+Category D | 52 | 56 | 60 | 64
+
 ## Pros and Cons of 3D Bar Chart
 
 __Pros__
