--- a/src/description/10.md
+++ b/src/description/10.md
@@ -6,6 +6,15 @@ Flow Map is simply a combination of a flow diagram or sankey daigram and a map w
 
 If the map used is planar projection then the map should be placed on the __xz plane__.
 
+## Input
+
+Source | Destination 
+:-------------:| :-----:|  
+Source 1 | Destination 1 
+Source 2 | Destination 2 
+Source 3 | Destination 3 
+Source 4 | Destination 4 
+
 ## Visualization of Additional Datatype in Flow Map
 
 * __Stroke width__ or __width__ of the flow can be used to display a how much of object is tranferred
