--- a/src/description/2.md
+++ b/src/description/2.md
@@ -6,6 +6,15 @@ Correlation,Distribution
 
 These plots are useful for viewing the relationship among a dependent and two independent variables. They mostly used in engineering to plot three dimensional relationship g(x, y, z). Another application can be in education to help student visualize three dimensional geometry.
 
+## Input
+
+ x | y | z | 
+:-------------:| :-----:| :-----:| 
+4 | 8 | 12
+16 | 20 | 24
+28 | 32 | 36
+40 | 44 | 48
+
 ## Construction of Surface Plot
 
 The construction of surface plot require domain for two independent variables and incremental step for the independent variable. Then using these domain and incremental step the dependent variable is calculated and the graph is plot using this dataset. For example let __y = sin(x) * cos(z)__. Domain of __x__ and __z__ is defined as __(0,3.14)__ with a incremental step of __0.1__ (the domain of __x__ and __z__ can be identical or different). Using these domains as input to the function __y__ is calculated for all the combinations of __x__ and __z__ value. Using this triplet of __x, y__ and __z__ the plot is drawn.
