--- a/src/description/3.md
+++ b/src/description/3.md
@@ -6,6 +6,16 @@ Trends
 
 This can be used to plot a motion of an object in three dimensional space or can also be used to visualize pathlines or streamline like the flow of wind around a plane wing. Multiple lines can be grouped with each other to be compared to one another.
 
+
+## Input
+
+Serial No. | x | y | z | 
+:-------------:| :-----:| :-----:|:-----:| 
+1 | 4 | 8 | 12
+2 | 16 | 20 | 24
+3 | 28 | 32 | 36
+4 | 40 | 44 | 48
+
 ## Pros and Cons of 3D Contour
 
 __Pros__
