--- a/src/description/4.md
+++ b/src/description/4.md
@@ -6,6 +6,15 @@ A point cloud is a set of points in a coordinate system; hence 3D point cloud is
 
 Traditionally point cloud in 3D coordinate system have been used to visualize the external surface of an object; but in data visualization it can also be used to visualize point or position of object in space.
 
+## Input
+
+ x | y | z | 
+:-------------:| :-----:| :-----:| 
+4 | 8 | 12
+16 | 20 | 24
+28 | 32 | 36
+40 | 44 | 48
+
 ## Visualization of Additional Datatype in Point Cloud
 
 * __Size__ of the point can be used to display a quantitative attribute of the object
