--- a/src/description/5.md
+++ b/src/description/5.md
@@ -6,6 +6,15 @@ Scatter plots are plots or diagrams which visualizes quantitative data as sets o
 
 Scatter plots are one of the most common forms of visualization, and they are widely used in scientific visualization. They are mostly used to find correlations, clusters, patterns, outliers, and trends in the dataset. 
 
+## Input
+
+ x | y | z | 
+:-------------:| :-----:| :-----:| 
+4 | 8 | 12
+16 | 20 | 24
+28 | 32 | 36
+40 | 44 | 48
+
 ## Pros and Cons of 3D Scatter Plot
 
 __Pros__
