--- a/src/description/6.md
+++ b/src/description/6.md
@@ -4,6 +4,15 @@ Correlation,Distribution,Identifying Outliers
 
 Bubble chart is a variation of scatter plot; bubble chart are scatter plots with point size representing a quantitative data type and color representing a categorical data type. 3D bubble chart generally visualizes four-dimensional data; although additional data can be visualized using colours. _2D bubble charts gained popularity after Hans Rosling's TED 2006 talk on human development trends._
 
+## Input
+
+ x | y | z | r
+:-------------:| :-----:| :-----:| :-----:| 
+4 | 8 | 12 | 8
+16 | 20 | 24 | 16 
+28 | 32 | 36 | 24
+40 | 44 | 48 | 32
+
 ## Pros and Cons of 3D Bubble Chart
 
 __Pros__
