--- a/src/description/7.md
+++ b/src/description/7.md
@@ -11,6 +11,15 @@ Connected scatterplots can contain two particularly interesting features: __L-sh
 
 _A connected scatterplot can only be drawn when the time series are sampled at the same rate, for example all the time series should be sampled yearly._
 
+## Input
+
+Year / Time | x | y | z | 
+:-------------:| :-----:| :-----:|:-----:| 
+2000 | 4 | 8 | 12
+2001 | 16 | 20 | 24
+2002 | 28 | 32 | 36
+2003 | 40 | 44 | 48
+
 ## Pros and Cons of 3D Contour
 
 __Pros__
