--- a/src/description/8.md
+++ b/src/description/8.md
@@ -4,6 +4,15 @@ Relationships,Clustering
 
 In graph theory in mathematics, a graph is a structure formed by vertices and edges; where vertices represent a set of objects and edges represent the relationship between these objects. Graph are mostly used to visualize relationships (e.g. social networks). Visualizing a graph can help identify hidden relationships and interesting patterns.
 
+## Input
+
+| | Node 1 | Node 2 | Node 3 | Node 4
+:-------------:| :-----:| :-----:|:-----:| :-----:| 
+Node 1 |  | ✔ | ✔ | ✔ 
+Node 2 | ✔ |  |  | |
+Node 3 | ✔ |  |  | ✔
+Node 4 | ✔ |  | ✔ | |
+
 ## Visualization of Additional Datatype in Graph Drawing
 
 * __Size__ of the vertices can be used to display a quantitative attribute of the node
