--- a/src/description/9.md
+++ b/src/description/9.md
@@ -6,6 +6,15 @@ Bar Map Chart is simply a combination of a bar chart and a map; with bar placed 
 
 If the map used is planar projection then the map should be placed on the __xz plane__ i.e. the floor and the bars should rise on the __y axes__.
 
+## Input
+
+Location / Country | Value 
+:-------------:| :-----:|  
+Location 1 | 8 
+Location 2 | 20 
+Location 3 | 32 
+Location 4 | 44 
+
 ## Pros and Cons of 3D Bar Chart
 
 __Pros__
