--- a/src/description/11.md
+++ b/src/description/11.md
@@ -6,6 +6,15 @@ A Waterfall Plot is a three-dimensional plot in which multiple curves of data ar
 
 _This plot is most commonly and frequently used in spectral and frequency analysis._
 
+## Input
+
+Serial No. | x1 | x2 | x3 | x4
+| :-------------: |:-------------:| :-----:| :-----:| :-----:|
+ 1 | 4 | 8 | 12 | 16
+ 2 | 20 | 24 | 28 | 32
+ 3 | 36 | 40 | 44 | 48
+ 4 | 52 | 56 | 60 | 64
+
 ## Pros and Cons of 3D Contour
 
 __Pros__
