--- a/src/description/1.md
+++ b/src/description/1.md
@@ -1,10 +1,12 @@
 Comparison,Magnitude,Distribution,Pattern
 /img/cardImg/01.png
+/img/examples/01/BumCd.png,/img/examples/01/plotting-3d-bar-graph-in-matlab-or-excel-stack-overflow-with-regard-to-3d-bar-graph-excel.png,/img/examples/01/screenshot.jpg
+Source: https://i.stack.imgur.com/BumCd.png,Source: http://www.terrapatria.org/p/2018/02/plotting-3d-bar-graph-in-matlab-or-excel-stack-overflow-with-regard-to-3d-bar-graph-excel.png,Source: https://se.mathworks.com/matlabcentral/fileexchange/35274-matlab-plot-gallery-bar-graph-3d?focused=6793108&tab=example
 # 3D Bar Chart
 
 Bar charts are used to display and compare the quantitative data type for different discrete categories of data. 3D bar chart uses cuboids or cylinders as bars to visualize the data, with the height of each bar proportional to the bars’ represented values. _For the visualization to be more readable; the categories should be represented on the X and Z axes and the value should be represented on the Y axes._
 
-Bar charts are one of the most common forms of visualization, because they are very easy to interpret. They are mostly used to compare values between discrete categories and to find the frequency distribution.
+Bar charts are one of the most common forms of visualization because they are very easy to interpret. They are mostly used to compare values between discrete categories and to find the frequency distribution.
 
 _3D bar charts are more informed if the two categories on the X and Z axes are related for example age group and race or day of the week and time of the day._ 
 
@@ -25,5 +27,5 @@ __Pros__
 * Easy to understand due to widespread use in business and the media
 
 __Cons__
-* Occlusion is caused because of overlaping bars (opacity can be used to solve this problem)
-* Ordering of categories for a norminal data can change interpretation
+* Occlusion is caused because of overlapping bars (opacity can be used to solve this problem)
+* Ordering of categories for a nominal data can change the interpretation
