--- a/src/description/10.md
+++ b/src/description/10.md
@@ -1,8 +1,10 @@
 Relationship,Geospatial Data
 /img/cardImg/10.png
+/img/examples/10/armstrade.png,/img/examples/10/usa-air-routes-google-earth.JPG,/img/examples/10/deckgl.png
+Source: https://armsglobe.chromeexperiments.com/,Source: http://www.barnabu.co.uk/google-earth-complete-us-air-routes/,Source: https://uber.github.io/deck.gl/#/examples/core-layers/arc-layer
 # 3D Flow Map
 
-Flow Map is simply a combination of a flow diagram or sankey daigram and a map which visualizes movement of an object or many object from one location to another. If the flow of an object is not a straight line like migration of the birds it can also be seen as a combination 3D contour and a map.
+Flow Map is simply a combination of a flow diagram or Sankey diagram and a map which visualizes the movement of an object or many different objects from one location to another. If the flow of an object is not a straight line like the migration of the birds it can also be seen as a combination 3D contour and a map.
 
 If the map used is planar projection then the map should be placed on the __xz plane__.
 
@@ -17,15 +19,15 @@ Source 4 | Destination 4
 
 ## Visualization of Additional Datatype in Flow Map
 
-* __Stroke width__ or __width__ of the flow can be used to display a how much of object is tranferred
-* __Colour__ of the flow can be used to display an categorical data of the flow; for example colour an be used to visualize if a flow is inflow or outflow
-* __Height__ of the flow can be used to visualize addition data; for example while visualizing the flow of flights, we can visualize the actual flying height of the flights using the height of the flow
+* __Stroke width__ or __width__ of the flow can be used to display a how much of object is transferred
+* __Colour__ of the flow can be used to display a categorical data of the flow; for example, colour can be used to visualize if a flow is an inflow or outflow
+* __Height__ of the flow can be used to visualize addition data; for example, while visualizing the flow of flights, we can visualize the actual flying height of the flights using the height of the flow
 
 ## Pros and Cons of 3D Bar Chart
 
 __Pros__
-* Easy to identify relationship between different geographical region
-* Good to identify high density and low density zones
+* Easy to identify relationships between different geographical regions
+* Good to identify high density and low-density zones
 
 __Cons__
 * Flows can overlap and increase clutter
@@ -33,8 +35,8 @@ __Cons__
 
 ## Interactivity in VR to Enhance the Information
 
-* Instead of width, __animation__ can be used to visualize the how much of object is tranferred; faster the animation more object is tranferred (this can help reduce the clutter in the map)
+* Instead of width, __animation__ can be used to visualize the how much of object is transferred; faster the animation more objects are transferred (this can help to reduce the clutter on the map)
 
 ## Variations
 
-* 3D Contour Map (combination of 3D contour and map)
+* 3D Contour Map (combination of 3D contour and map can be used for example to show movements in birds in the air)
