--- a/src/description/11.md
+++ b/src/description/11.md
@@ -1,8 +1,10 @@
 Patterns,Comparison,Trend Over Time
 /img/cardImg/11.png
+/img/examples/11/download.jpeg,/img/examples/11/sys6wtf.gif,/img/examples/11/Choe_as_3D_Waterfall_500px.gif,/img/examples/11/Waterfall-plot-of-r-a-e-k-of-the-4-4-silicene-overlayer-on-Ag111-at-11-k.png
+Source: https://www.originlab.com/doc/Tutorials/2D-Waterfall,Source: http://www.speakerbuilding.com/content/1009/page_7.php,Source: https://www.originlab.com/www/products/GraphGallery.aspx?GID=86,Source: https://www.researchgate.net/publication/271603202_Electronic_Structure_of_the_4_4_Silicene_Monolayer_On_Semi-Infinite_Ag111/figures?lo=1&utm_source=google&utm_medium=organic
 # Waterfall Plot
 
-A Waterfall Plot is a three-dimensional plot in which multiple curves of data are displayed at teh same time. Typically waterfall plot is often used to show how two-dimensional information changes over time with the first curve being the most recent one. Instead of time some other variable can also be used.
+Waterfall Plot is a three-dimensional plot in which multiple curves of data are displayed at the same time. Typically waterfall plot is often used to show how two-dimensional information changes over time with the first curve being the most recent one. Instead of time, some other variable can also be used.
 
 _This plot is most commonly and frequently used in spectral and frequency analysis._
 
@@ -18,7 +20,7 @@ Serial No. | x1 | x2 | x3 | x4
 ## Pros and Cons of 3D Contour
 
 __Pros__
-* Peaks appear to be side by side which help in identifying intresting spectral values
+* Peaks appear to be side by side which help in identifying interesting spectral values
 
 __Cons__
 * The curves in the front masks the ones behind it
