--- a/src/description/13.md
+++ b/src/description/13.md
@@ -1,20 +1,22 @@
 Conceptual Drawing
 /img/cardImg/13.png
+/img/examples/13/F-35B_cutaway_with_LiftFan.jpg,/img/examples/13/2944f5bade4b5af1aed64278d9d4db3f.jpg,/img/examples/13/01.jpg
+Source: https://commons.wikimedia.org/wiki/File:F-35B_cutaway_with_LiftFan.jpg,Source: https://i.pinimg.com/originals/29/44/f5/2944f5bade4b5af1aed64278d9d4db3f.jpg,Source: https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-8-389
 # Cutaway Drawing
 
-A cutaway drawing is a 3D graphics in which a part of the surface element of a 3D model are selectively removed, to make internal features visible. The purpose of a cutaway drawing is to allow the viewer to have a look into an otherwise solid opaque object. This has been traditionally used in engineering drawings. But recently in 3D visualization one of the main application of cutaway drawing have been medical imaging, where doctors user 3D models of organs and slice through them to daignose diesease and injuries.
+Cutaway drawing is a 3D graphics in which a part of the surface element of a 3D model is selectively removed, to make internal features visible. The purpose of a cutaway drawing is to allow the viewer to have a look inside an otherwise solid opaque object. This has been traditionally used in engineering drawings. But recently in 3D visualization, one of the main application of cutaway drawing have been medical imaging, where doctors user 3D models of organs and slice through them to diagnose disease and injuries.
 
 ## Pros and Cons of 3D Bar Chart
 
 __Pros__
-* Easy to understand as it show actual 3D structure of the object
-* Good tool for examining physical object
+* Easy to understand as it shows an actual 3D structure of the object
+* Good tool for examining a physical object
 * Useful application in medical sciences like 3D x-rays, 3D MRI etc.
 
 __Cons__
-* Lots of efforts required for implementation as all the component that need to be visualized need to have a 3D object designed for it
-* Non scalable i.e. each new visualization need to be implemented from scratch if it requires new or different components
+* Lots of efforts required for implementation as all the component that needs to be visualized need to have a 3D object designed for it
+* Non-scalable i.e. each new visualization need to be implemented from scratch if it requires new or different components
 
 ## Interactivity in VR to Enhance the Information
 
-* Ability to decide where and how to slice an object can help user look for the information he / she is looking for
+* Ability to decide where and how to slice an object can help user look for the information he/she is looking for
