--- a/src/description/3.md
+++ b/src/description/3.md
@@ -1,11 +1,12 @@
 Trends
 /img/cardImg/03.png
+/img/examples/03/Create3DContourPlotExample_01.png,/img/examples/03/csm_Kops-FSP-Bericht2a-streamline_50-00_74a85bac27.jpg
+Source: https://se.mathworks.com/help/matlab/ref/contour3.html,Source: http://www.thepinsta.com/fluid-dynamics-valve_4RpEUq4nY%7CzrzWsqpQ23UgfrFIQFubWUlRmpAAJMbNo/
 # 3D Contour
 
 3D contour displays a three-dimensional plot of a set of data points connected via a line. This should not be confused with the 2D line graph because in 2D line graph one of the axes is always ordered which is not the case with 3D contour. 
 
-This can be used to plot a motion of an object in three dimensional space or can also be used to visualize pathlines or streamline like the flow of wind around a plane wing. Multiple lines can be grouped with each other to be compared to one another.
-
+This can be used to plot a motion of an object in three-dimensional space or can also be used to visualize pathlines or streamline in fluid dynamics like the flow of wind around a plane wing. Multiple lines can be grouped with each other to be compared to one another.
 
 ## Input
 
@@ -19,11 +20,11 @@ Serial No. | x | y | z |
 ## Pros and Cons of 3D Contour
 
 __Pros__
-* Motion of an object in 3D space can be easily visualized like flight of a bird
+* Motion of an object in 3D space can be easily visualized like the flight of a bird
 
 __Cons__
 * Grouping multiple lines can cause clutter and confusion
-* If one of the axes is ordered it could to be harder to interpret which axes is ordered
+* If one of the axes is ordered it could to be harder to interpret which one of the axes is ordered
 
 ## Interactivity in VR to Enhance the Information
 
