--- a/src/description/4.md
+++ b/src/description/4.md
@@ -1,10 +1,12 @@
 Distribution,Spacial Coordinate
 /img/cardImg/04.png
+/img/examples/04/piusa-3d-cave-03.jpg,/img/examples/04/screen-shot-2014-12-14-at-12-26-51-pm.png,/img/examples/04/imagestarmap.png
+Source: https://www.solidsmack.com/3d-cad-technology/scan-your-cave-model-it-in-modo-call-it-a-day/,Source: http://stars.chromeexperiments.com/,Source: http://sci.esa.int/star_mapper/
 # 3D Point Cloud
 
-A point cloud is a set of points in a coordinate system; hence 3D point cloud is set of point in 3D coordinate system. 
+A point cloud is a set of points in a coordinate system; hence 3D point cloud is set of point in a 3D coordinate system. 
 
-Traditionally point cloud in 3D coordinate system have been used to visualize the external surface of an object; but in data visualization it can also be used to visualize point or position of object in space.
+Traditionally point cloud in a 3D coordinate system has been used to visualize the external surface of an object, but in data visualization, it can also be used to visualize point or position of one or many objects in space.
 
 ## Input
 
@@ -18,8 +20,8 @@ Traditionally point cloud in 3D coordinate system have been used to visualize th
 ## Visualization of Additional Datatype in Point Cloud
 
 * __Size__ of the point can be used to display a quantitative attribute of the object
-* __Colour__ of the point can be used to display an aditional quantitative or cetegorical attribute of the object
-* __3D model__ of the object can be used insted of a point or sphere or random shape
+* __Colour__ of the point can be used to display an additional quantitative or categorical attribute of the object
+* __3D model__ of the object can be used instead of a point or sphere or random shape
 
 _One of the common application of point cloud in data visualization is for creating a map of stars and planets and to identify their orbits._
 
@@ -27,7 +29,7 @@ _One of the common application of point cloud in data visualization is for creat
 
 __Pros__
 * Easy to understand as position attribute is used to represent the position
-* It is great to identifing clusters
+* It is great to identify clusters
 
 __Cons__
 * It can look clutters if the data set is big
