--- a/src/description/6.md
+++ b/src/description/6.md
@@ -1,8 +1,10 @@
 Correlation,Distribution,Identifying Outliers
 /img/cardImg/06.png
+/img/examples/06/Chart_About_3D_Bubble_Charts.png,/img/examples/06/images.jpeg,/img/examples/06/3D_Scatter_with_Colormap.png
+Source: http://help.infragistics.com/Help/Doc/WinForms/2011.2/CLR2.0/html/Chart_Working_with_3D_Bubble_Chart_Data.html,Source: http://www.doka.ch/Excel3Dscatterplot.htm,Source: https://www.originlab.com/doc/Tutorials/3D-Scatter-ColorMap
 # 3D Bubble Chart
 
-Bubble chart is a variation of scatter plot; bubble chart are scatter plots with point size representing a quantitative data type and color representing a categorical data type. 3D bubble chart generally visualizes four-dimensional data; although additional data can be visualized using colours. _2D bubble charts gained popularity after Hans Rosling's TED 2006 talk on human development trends._
+Bubble chart is a variation of scatter plot; bubble chart is a scatter plot with point size representing a quantitative data type and color representing a categorical data type. 3D bubble chart generally visualizes four-dimensional data; although additional data can be visualized using colours. _2D bubble charts gained popularity after Hans Rosling's TED 2006 talk on human development trends._
 
 ## Input
 
@@ -22,7 +24,7 @@ __Pros__
 
 __Cons__
 * Because of the depth perception; the size of the point can be misinterpreted
-* Different shapes cannot not be used for point as it is hard to compares sizes of different shapes
+* Different shapes cannot be used for points as it is hard to compare sizes of different shapes
 * For a larger dataset, the plot can get cluttered and messy
 * Overlapping data point can cause occlusion (opacity can be used to solve this problem)
 * Aspect ratio of the graph can greatly affect the interpretation of the data 
