--- a/src/description/9.md
+++ b/src/description/9.md
@@ -1,8 +1,10 @@
 Comparison,Geospatial Data,Magnitude
 /img/cardImg/09.png
+/img/examples/09/3D_Bar_on_Flatten_Surface.png,/img/examples/09/7baa46e027455c02faa99b9443256db6.jpg,/img/examples/09/deckgl.png,/img/examples/09/allenkey.gif,/img/examples/09/bar_chart_3d_maps.png
+Source: https://www.originlab.com/index.aspx?go=products/origin/graphing,Source: http://content.time.com/,Source: https://uber.github.io/deck.gl/#/examples/core-layers/geojson-layer,Source: https://eng.uber.com/data-viz-intel/,Source: http://globe.chromeexperiments.com/
 # 3D Bar Map Chart
 
-Bar Map Chart is simply a combination of a bar chart and a map; with bar placed on the location whose value they represent. Like a bar chart, the height of each bar is scaled to represent a quantitative data.The map counld be a map of the world, a country, city or even a spatial map of a room.
+Bar Map Chart is simply a combination of a bar chart and a map; with the bars placed on the location whose value they represent. Like a bar chart, the height of each bar is scaled to represent a quantitative data. The map could be a map of the world, a country, city or even a spatial map of a room.
 
 If the map used is planar projection then the map should be placed on the __xz plane__ i.e. the floor and the bars should rise on the __y axes__.
 
@@ -19,11 +21,11 @@ Location 4 | 44
 
 __Pros__
 * It is a great tool to combine geospatial data with quantitative data
-* In VR the user can walk around in the map and because of infinitely big canvas size the map could be of a very large size
-* In case of map of the room actual dimensions can be used
+* In VR the user can walk around on the map and because of infinitely big canvas size the map could be of a very large size
+* In case of the map of the room actual dimensions can be used
 
 __Cons__
-* Maps get hidden if there is high density of bars
+* Maps get hidden if there is a high density of bars
 * Smaller countries and bars can be hidden behind larger bars
 * If the map used is a globe; it gets harder to compare the height of the bars coming out of the bars
 
