--- a/src/description/12.md
+++ b/src/description/12.md
@@ -1,22 +1,24 @@
 Conceptual Drawing
-/img/cardImg/10.png
+/img/cardImg/12.png
+/img/examples/12/download1.jpeg,/img/examples/12/download.jpeg,/img/examples/12/HgEnW.jpg,/img/examples/12/maxresdefault.jpg
+Source: https://en.wikipedia.org/wiki/Exploded-view_drawing,Source: http://vis.berkeley.edu/papers/exview3D/,Source: https://i.stack.imgur.com/HgEnW.jpg,Source: https://www.youtube.com/watch?v=UDlQUnXxuV4
 # Exploded View Drawing
 
-An exploded view drawing is a diagram, picture, schematic or technical drawing of an object, that shows all its internal parts. I also shows the relationship between these part and how they are assembled. It shows the components of an object suspended in space with distance between each component.
+Exploded view drawing is a diagram, picture, schematic or technical drawing of an object, that shows all its internal parts. It also shows the relationship between these part and how they are assembled. It shows the components of an object suspended in space with distances between each component.
 
-This type of visualizations can be used in desgining machines, automobiles, spaceships etc. It can also be used to teach people how to assemble an object.
+This type of visualizations can be used in designing machines, automobiles, spaceships etc. It can also be used to teach people how to assemble an object.
 
 ## Pros and Cons of 3D Bar Chart
 
 __Pros__
-* Easy to understand as it show actual 3D structure of the object
+* Easy to understand as it shows an actual 3D structure of the object
 * Good tool for design physical object and teaching people assembly of objects
 
 __Cons__
-* Lots of efforts required for implementation as all the component that need to be visualized need to have a 3D object designed for it
-* Non scalable i.e. each new visualization need to be implemented from scratch if it requires new or different components
+* Lots of efforts required for implementation as all the components that need to be visualized need to have a 3D object designed for it
+* Non-scalable i.e. each new visualization need to be implemented from scratch if it requires new or different components
 
 ## Interactivity in VR to Enhance the Information
 
-* Ability to increase and decrease the spacing between component can help in comparing the sizes in the daigram 
-* Ability to select and particular component and zoom and rotate it can make the drawing more interactive and readable
+* Ability to increase and decrease the spacing between component can help in comparing the sizes in the diagram 
+* Ability to select a particular component and zoom and rotate it can make the drawing more interactive and readable
