--- a/src/description/5.md
+++ b/src/description/5.md
@@ -1,5 +1,7 @@
 Correlation,Distribution,Identifying Outliers
 /img/cardImg/05.png
+/img/examples/05/ykkslsl.jpeg,/img/examples/05/9opOV.gif,/img/examples/05/threedscatter2.jpg,/img/examples/05/threedscatter2.png,/img/examples/05/Skærmbillede-2017-09-04-kl.-17.06.45.png
+Source: http://rgraphgallery.blogspot.fi/2013/04/rg-3d-scatter-plots-with-vertical-lines.html,Source: https://i.stack.imgur.com/9opOV.gif,Source:https://se.mathworks.com/matlabcentral/fileexchange/35288-matlab-plot-gallery-scatter-plot-3d?focused=6793187&tab=example,Source: http://www.doka.ch/Excel3Dscatterplot.htm,Source: http://www.advsofteng.com/gallery_3dscatter.html,Source: http://www.doka.ch/Excel3Dscatterplot.html
 # 3D Scatter Plot
 
 Scatter plots are plots or diagrams which visualizes quantitative data as sets of points (these points can be any shape) in space. 3D scatter plots generally visualizes three-dimensional data; although additional data can be visualized using colours, shapes of the dot etc.
