--- a/src/description/8.md
+++ b/src/description/8.md
@@ -1,8 +1,10 @@
 Relationships,Clustering
 /img/cardImg/08.png
+/img/examples/08/687474703a2f2f676973742e6769746875622e636f6d2f76617374757269616e6f2f39373263613466336538653037346461636631346437303731616164386566392f7261772f707265766965772e706e67.png,/img/examples/08/as-network-CA.png,/img/examples/08/maxresdefault.jpg
+Source: https://github.com/vasturiano/d3-force-3d,Source: https://www.youtube.com/watch?v=9Ekp1BcvQDI,Source: https://www.youtube.com/watch?v=JsEm-CDj4qM
 # 3D Graph Drawing
 
-In graph theory in mathematics, a graph is a structure formed by vertices and edges; where vertices represent a set of objects and edges represent the relationship between these objects. Graph are mostly used to visualize relationships (e.g. social networks). Visualizing a graph can help identify hidden relationships and interesting patterns.
+In graph theory in mathematics, a graph is a structure formed by vertices and edges; where vertices represent a set of objects and edges represent the relationship between these objects. Graph Drawings are mostly used to visualize relationships (e.g. social networks). Visualizing a graph can help identify hidden relationships and interesting patterns.
 
 ## Input
 
@@ -15,19 +17,19 @@ Node 4 | ✔ |  | ✔ | |
 
 ## Visualization of Additional Datatype in Graph Drawing
 
-* __Size__ of the vertices can be used to display a quantitative attribute of the node
-* __Colour__ of the vertices can be used to display an aditional norminal or ordinal attribute of node
+* __Size__ of the vertices can be used to display a quantitative attribute of the noded
+* __Colour__ of the vertices can be used to display an additional nominal or ordinal attribute of the nodes
 * __Width__ of the edges can be used to display a quantitative attribute of the link
-* __Colour__ of the edges can be used to display an aditional norminal or ordinal attribute of the link
+* __Colour__ of the edges can be used to display an additional nominal or ordinal attribute of the link
 
 ## Pros and Cons of 3D Graph Drawing
 
 __Pros__
-* Good to visualize relationship
-* In VR because of infinite amount of space can help in reducing cluttering
+* Good for visualizing relationships
+* In VR because of an unlimited amount of space can help in reducing cluttering
 
 __Cons__
-* Different drawing algorithm can effect the interpretation
+* Different drawing algorithm can affect the interpretation
 * Can look cluttered if the amount of node and edges are large
 
 ## Interactivity in VR to Enhance the Information
